--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,20 +6,30 @@ Variables.
 
 :root {
   /* Spacing. */
-  --ns-spacing: 10px;
+  --ns-spacing-1: 10px;
 
-  /* Typography. */
-  --ns-base-font-family: sans-serif;
-  --ns-base-font-size: 16px;
-  --ns-base-line-height: 1.5;
+  /* Buttons. */
+  --ns-button-font-size: 2rem;
+
+  /* Headings. */
+  --ns-h1-font-size: 1.5rem;
 
   /* Layout. */
   --ns-layout-color: #565350;
   --ns-layout-background-color: #f6f3f0;
 
+  /* Links. */
+  --ns-link-color: #06c;
+  --ns-link-color-hover: #c60;
+
   /* Textarea. */
   --ns-textarea-color: #565350;
   --ns-textarea-background-color: #fff;
+
+  /* Typography. */
+  --ns-base-font-family: sans-serif;
+  --ns-base-font-size: 16px;
+  --ns-base-line-height: 1.5;
 }
 
 /*
@@ -44,11 +54,11 @@ html {
 }
 
 a {
-  color: #06c;
+  color: var(--ns-link-color);
 }
 
 a:hover {
-  color: #c60;
+  color: var(--ns-link-color-hover);
 }
 
 /*
@@ -60,11 +70,11 @@ Layout.
 .ns-layout {
   display: flex;
   flex-direction: column;
-  gap: var(--ns-spacing);
+  gap: var(--ns-spacing-1);
 
   color: var(--ns-layout-color);
   background: var(--ns-layout-background-color);
-  padding: var(--ns-spacing);
+  padding: var(--ns-spacing-1);
 
   width: 100%;
   height: 100%;
@@ -84,13 +94,13 @@ Layout: header.
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: var(--ns-spacing);
+  gap: var(--ns-spacing-1);
 }
 
 .ns-layout__header__title {
   flex: 1;
 
-  font-size: 1.5rem;
+  font-size: var(--ns-h1-font-size);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -105,7 +115,7 @@ Layout: main.
 .ns-layout__main {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
-  gap: var(--ns-spacing);
+  gap: var(--ns-spacing-1);
 
   flex: 1;
 }
@@ -139,7 +149,7 @@ Textarea.
   font-size: inherit;
   line-height: inherit;
 
-  padding: var(--ns-spacing);
+  padding: var(--ns-spacing-1);
   resize: none;
 }
 
@@ -160,5 +170,5 @@ Button.
   border: 0;
 
   cursor: pointer;
-  font-size: 2rem;
+  font-size: var(--ns-button-font-size);
 }
